<package>
  <name>social_octomap_ros</name>
  <version>0.4.1</version>
  <description>
    social_octomap_ros provides conversion functions between ROS and OctoMap's native types.
    This enables a convenvient use of the social_octomap package in ROS.
    
  </description>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/social_octomap_ros</url>
  <url type="bugtracker">https://github.com/OctoMap/social_octomap_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>social_octomap_msgs</build_depend>
  <build_depend>social_octomap</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>social_octomap_msgs</run_depend>
  <run_depend>social_octomap</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
